try to prevent bluehightlight on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+}
+
 html {
     padding-top: 10vh;
     display: flex;
